# homework-AIFileSystem

./: .gitignore  CLI_DEBUG_FIX_SUMMARY.md  DELIVERY_CHECKLIST.md  IMPLEMENTATION_STATUS_FINAL.md  IMPLEMENTATION_SUMMARY_OPTIMIZED_REACT.md  MCP_API_KEY_SETUP.md  README.md  USER-GUIDE.md  assigment_AI.md  debug_supervisor.py  demo_clear_command.py  demo_intelligent_agent.py  demo_usage_guide.py  hello.py  mcp_config.json  pyproject.toml  pytest.ini  setup_mcp_env.sh  test_agent_integration.py  test_complete_tool_metadata.py  test_describe_fix.py  test_final_integration.py  test_final_scenario.py  test_goal_oriented_reasoning.py  test_interactive_clarification.py  test_largest_file.py  test_mcp_integration.sh  test_memory_integration.py  test_quick_validation.py  test_simple_clarification.py  test_supervisor_fix.py  test_tool_metadata_extraction.py  test_translation_method.py
.cursor/: settings.json
DOCS/: Implementation-Plan.md  MCP_Integration_Guide.md  README.md  TASK4_STATUS_REPORT.md  agent-architecture.md  agent-documentation.md  assignment_AI.md  conversation-examples.md  log.md  master-plan.md  mcp-initialize-implementation-summary.md  task-plan-phase2.md  task-plan.md  task7-implementation-summary.md  troubleshooting.md  usage-guide.md
DOCS/planning/: task-plan-phase1.md  task-plan-phase3.md  task-plan-phase4.md
agent/: ARCHITECTURE.md  README.md  __init__.py  diagnostic_cli.py  diagnostics.py
agent/core/: README.md  __init__.py  advanced_tools_metadata.py  exceptions.py  goal_validator.py  llm_tool_selector.py  react_loop.py  secure_agent.py  tool_metadata.py
agent/orchestrator/: __init__.py  orchestrator_lite.py
agent/supervisor/: README.md  __init__.py  supervisor.py
chat_interface/cli_chat/: README.md  __init__.py  chat.py  demo_cli_features.py
chat_interface/demo_streamlit/: __init__.py
config/: ENV_SETUP.md  README.md  __init__.py  demo_env_system.py  env_loader.py  exceptions.py  manage_env.py  model_config.py  models.yaml
config/env/: .env.development.template  .env.local.template  .env.production.template  .env.template  .env.testing.template
dev/: README.md  debug_directory_command.py  test_agent_list_directories.py  test_directory_patterns.py  test_list_directories_fix.py
dev/debug/: debug_supervisor.py
dev/demos/: config_demo_env_system.py  crud_tools_debug_gemini.py  crud_tools_example_model_usage.py  demo_advanced_guide.py  demo_directory_listing.py  demo_intelligent_agent.py  demo_italian_support.py  demo_llm_tool_selection_solution.py  demo_project_analysis.py  interactive_usage_demo.py
dev/docs/: IMPLEMENTATION_SUMMARY.md  TOOL_METADATA_ARCHITECTURE_COMPLETE.md  bugfix-summary.md  clear-command-implementation.md  conversation-examples.md  directory-cleanup-summary.md  task6-implementation-summary.md  task7-implementation-summary.md
dev/sandbox/: config.json  config_summary.json  demo_guide.txt  employees.csv  fibonacci.py  hello.txt  project_structure.md  usage_guide_demo.txt  (+1 more)
sandbox/: hello.py  hello.txt  quick_demo.txt
server/: deploy.sh  stdio_mcp_server.py
tests/: README.md  __init__.py  conftest.py  test_agent_crud_operations.py  test_chat_interface.py  test_english_thinking_enforcement.py  test_intelligent_queries.py  test_llm_supervisor.py  test_llm_tool_selection.py  test_mcp_integration.py  test_no_keyword_matching.py
tools/: README.md
tools/crud_tools/: .coverage  README.md  __init__.py  example_model_usage.py  pyproject.toml  test_config_integration.py  test_model_config.py
tools/crud_tools/src/crud_tools/: __init__.py  gemini_adapter.py  question_tool.py  tools.py
tools/crud_tools/tests/: __init__.py  test_crud_tools.py  test_gemini_adapter.py
tools/workspace_fs/: .coverage  .github-actions-example.yml  CI_CONFIGURATION.md  Makefile  README.md  __init__.py  bandit-report.json  ci_validate.py  demo_api.py  pyproject.toml
tools/workspace_fs/src/workspace_fs/: __init__.py  exceptions.py  fs_tools.py  workspace.py
tools/workspace_fs/tests/: __init__.py  test_basic.py  test_behavior.py
workspace/: mcp_test.txt
(+73 files in other folders)
