[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crud-tools"
version = "0.1.0"
description = "High-level CRUD operations for the AI File System agent"
authors = ["AI File System Project"]
readme = "README.md"
packages = [{include = "crud_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-ai = "^0.0.14"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
workspace-fs = {path = "../workspace_fs", develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.0"

[tool.poetry.group.security.dependencies]
bandit = "^1.7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=crud_tools",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=75"
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.bandit]
exclude_dirs = ["tests"]
