[tool.poetry]
name = "workspace-fs"
version = "0.1.0"
description = "Secure file system operations with sandbox enforcement"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "workspace_fs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=workspace_fs --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # assert allowed in tests

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used allowed in tests
